[tool.poetry]
name = "hyetris"
version = "0.1.0"
description = "Hy tetris thing"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hy = "^0.19.0"
xo1 = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
